--- a/style.css
+++ b/style.css
@@ -42,11 +42,12 @@ a {
    }
 
 nav {
+    display: inline-flex;
     height: 120px;
 }
 
 .Atas_kiri {
-    float: left;
+    display: inline-flex;
     padding: 0 4px;
 }
 
@@ -55,7 +56,7 @@ nav {
     padding: 20px;
 }
 .Atas_kanan {
-    float: left;
+    display: inline-block;
     margin: 20px auto;
 }
 
@@ -102,7 +103,7 @@ nav {
 }
 
 .bawahkiri>ul>li {
-    float: left;
+    display: inline-flex;
     margin: auto 20px;
     font-weight: 600;
     font-size: 13px;
@@ -113,7 +114,7 @@ nav {
 }
 
 .bawahKanan>ul>li {
-    float: left;
+    display: inline-flex;
     margin: auto 20px;
     font-weight: 600;
     font-size: 13px;
@@ -145,6 +146,7 @@ button {
 
 .button2 {
     background-color: rgba(255, 255, 255, 0);
+    border-width: 1px;
     
 }
 
@@ -167,11 +169,11 @@ button {
 }
 
 li .dropdown {
-    display: inline-block;
+    display: inline-flex;
 }
 
 .dropdown:hover .isi-dropdown {
-    display: block;
+    display: flex;
 }
 
 li .isi-dropdown a:hover {
