--- a/style.css
+++ b/style.css
@@ -32,13 +32,13 @@ a {
     background-color: rgb(165, 7, 7);
     width: 0; 
     height: 80px; 
-    display: inline-flex;
+    display: grid;
     margin: 20px auto;
 }
 
 .bag_samping {
     background-color: rgb(11, 132, 136);
-    width: 100%;
+    grid-template-columns : 100%;
    }
 
 nav {
@@ -47,7 +47,7 @@ nav {
 }
 
 .Atas_kiri {
-    display: inline-flex;
+    display: inline-grid;
     padding: 0 4px;
 }
 
@@ -61,7 +61,7 @@ nav {
 }
 
 .atas {
-    display: flex;
+    display: inline-grid;
     padding: 10px 0;
     margin-left: 20px;
 }
@@ -85,7 +85,7 @@ nav {
 }
 
 .atas .gambar1 {
-    display: flex;
+    display: inline;
 }
 .atas .not img {
     width: 15px;
@@ -103,7 +103,7 @@ nav {
 }
 
 .bawahkiri>ul>li {
-    display: inline-flex;
+    display: inline-grid ;
     margin: auto 20px;
     font-weight: 600;
     font-size: 13px;
@@ -114,7 +114,7 @@ nav {
 }
 
 .bawahKanan>ul>li {
-    display: inline-flex;
+    display: inline-grid;
     margin: auto 20px;
     font-weight: 600;
     font-size: 13px;
@@ -169,11 +169,11 @@ button {
 }
 
 li .dropdown {
-    display: inline-flex;
+    display: block;
 }
 
 .dropdown:hover .isi-dropdown {
-    display: flex;
+    display: block;
 }
 
 li .isi-dropdown a:hover {
